--- a/vignettes/catch_prediction.Rmd
+++ b/vignettes/catch_prediction.Rmd
@@ -22,6 +22,8 @@ library(plyr)
 library(reshape2)
 ```
 
+# Simulate data
+
 ```{r}
 # data simulation
 set.seed(100)
@@ -63,15 +65,16 @@ for (i in 1:nyears) {
         
         for (k in 1:sum(ngrids)) {
     
-            dat <- rbind(dat, data.frame(year      = ifelse(i < 10, paste0("0", as.character(i)), as.character(i)),
-                                         grid      = grids[k], 
-                                         effort    = rep(1, effort_per_grid[k]), 
-                                         sampled   = runif(effort_per_grid[k]) < sample_ratio[i, j],
-                                         bin       = rbinom(effort_per_grid[k], 1, theta[k]), 
-                                         catch     = rlnorm(effort_per_grid[k], log(mu[k]), sigma),
-                                         theta     = theta[k],
-                                         mu        = mu[k],
-                                         sigma     = sigma))
+            dat <- rbind(dat, 
+                         data.frame(year    = ifelse(i < 10, paste0("0", as.character(i)), as.character(i)),
+                                    grid    = grids[k], 
+                                    effort  = rep(1, effort_per_grid[k]), 
+                                    sampled = runif(effort_per_grid[k]) < sample_ratio[i, j],
+                                    bin     = rbinom(effort_per_grid[k], 1, theta[k]), 
+                                    catch   = rlnorm(effort_per_grid[k], log(mu[k]), sigma),
+                                    theta   = theta[k],
+                                    mu      = mu[k],
+                                    sigma   = sigma))
         }
     }
 }
@@ -84,11 +87,14 @@ gg <- ggplot(dat) + geom_histogram(aes(x = catch, y = ..density..)) + theme_bw()
 print(gg)
 ```
 
+# Compile model
 ```{r, results = 'hide'}
 # compile model
 model_code("year")
 mdl <- stan_model(file = 'year.stan')
 ```
+
+# Prepare data
 
 ```{r, results = 'hide'}
 # coerce observer data
@@ -114,30 +120,46 @@ X.predict <- data_design_matrix(dat.predict, X.dims, X.dimnames)
 
 # create input data list
 mdl.dat <- model_data(dat.sample, dat.predict, X.dims, X.sample, X.predict)
+```
 
-# create initial values
+# Create initial values
+```{r}
 mdl.ini <- map(optimizing(mdl, mdl.dat, iter = 500), 
                pars = c("gamma0", "gammaY", "beta0", "betaY"), 
                dims = list(0, X.dims['year'], 0, X.dims['year']))
 
 mdl.ini$sigma <- rep(1, X.dims['year'])
+```
 
-mdl.fit <- sampling(mdl, mdl.dat, init = function() mdl.ini, chains = 1)
+# MAP fit
 
-nit <- 1000
+```{r}
+nit <- 2000
+mdl.fit.map <- optimizing(mdl, mdl.dat, init = function() mdl.ini, hessian = TRUE, draws = nit)
+
+# extract results
+res.map <- map(mdl.fit.map, pars = c("predicted_catch"), dims = list(X.dims['year']))
+```
+
+# MCMC fit
+
+```{r}
+nit <- 2000
+mdl.fit.mcmc <- sampling(mdl, mdl.dat, init = function() mdl.ini, iter = nit, chains = 2)
+
+nit <- (2000 - 1000) * 2
+
+# extract results
+res.mcmc <- posterior(mdl.fit.mcmc, pars = "predicted_catch", dim.names = list(list(iter = 1:nit, year = X.dimnames$year)), melt = TRUE)[[1]]
 ```
 
 ```{r, echo = FALSE}
-gg <- traceplot(mdl.fit, pars = c("gamma_summary", "beta_summary", "error_summary")) + 
+gg <- traceplot(mdl.fit.mcmc, pars = c("gamma_summary", "beta_summary", "error_summary")) + 
         ggtitle("Parameter summary statistics") +
-        theme_bw(base_size = 16)
+        theme_bw(base_size = 12)
 print(gg)
 ```
 
-```{r}
-# save results
-res <- posterior(mdl.fit, pars = "predicted_catch", dim.names = list(iter = 1:nit, year = X.dimnames$year), melt = TRUE)[[1]]
-```
 
 ```{r}    
 # sum empirical observations by year
@@ -146,9 +168,9 @@ dfr <- ddply(dat.sample, .(year), summarize,
              pos_sum = sum(biomass))
 
 # extract simulated and expected observer sample values 
-dfs <- posterior(mdl.fit, 
+dfs <- posterior(mdl.fit.mcmc, 
                  pars = c("bin_sim_sum", "bin_hat_sum", "bin_sim_agg", "pos_sim_sum", "pos_hat_sum", "pos_sim_agg"), 
-                 dim.names = list(iter = 1:nit, year = X.dimnames$year), 
+                 dim.names = list(list(iter = 1:nit, year = X.dimnames$year)), 
                  melt = TRUE, 
                  fun = "median")
 
@@ -164,20 +186,21 @@ diagnostics <- dfr
 # discrepancy measures
 discrepancy <- list()
 
-emp     <- extract(mdl.fit, pars = "DBN")[[1]][,1]
-sim_sum <- extract(mdl.fit, pars = "DBN")[[1]][,2]
-sim_agg <- extract(mdl.fit, pars = "DBN")[[1]][,3]
+emp     <- extract(mdl.fit.mcmc, pars = "DBN")[[1]][,1]
+sim_sum <- extract(mdl.fit.mcmc, pars = "DBN")[[1]][,2]
+sim_agg <- extract(mdl.fit.mcmc, pars = "DBN")[[1]][,3]
 
 discrepancy[["BN"]] <- data.frame(iter = 1:nit, observed = emp, simulated_sum = sim_sum, simulated_aggregate = sim_agg)
 
-emp     <- extract(mdl.fit, pars = "DLN")[[1]][,1]
-sim_sum <- extract(mdl.fit, pars = "DLN")[[1]][,2]
-sim_agg <- extract(mdl.fit, pars = "DLN")[[1]][,3]
+emp     <- extract(mdl.fit.mcmc, pars = "DLN")[[1]][,1]
+sim_sum <- extract(mdl.fit.mcmc, pars = "DLN")[[1]][,2]
+sim_agg <- extract(mdl.fit.mcmc, pars = "DLN")[[1]][,3]
 
 discrepancy[["LN"]] <- data.frame(iter = 1:nit, observed = emp, simulated_sum = sim_sum, simulated_aggregate = sim_agg)
 ```
 
-```{r, echo = FALSE, fig.width = 3}
+```{r, echo = FALSE}
+par(mfrow = c(2, 3))
 plot(bin_hat_sum ~ bin_sum, diagnostics, xlab = "Observed", ylab = "Expected"); mtext("Binomial model\n", adj = 0)
 abline(0, 1, lwd = 2, col = 2)
     
@@ -185,9 +208,9 @@ plot(bin_sim_sum ~ bin_sum, diagnostics, xlab = "Observed", ylab = "Simulated");
 points(bin_sim_agg ~ bin_sum, diagnostics, col = 4)
 abline(0, 1, lwd = 2, col = 2)
 
-#plot(bin_sim_sum ~ bin_hat_sum, diagnostics, xlab = "Expected", ylab = "Simulated")
-#points(bin_sim_agg ~ bin_hat_sum, diagnostics, col = 4)
-#abline(0, 1, lwd = 2, col = 2)
+plot(bin_sim_sum ~ bin_hat_sum, diagnostics, xlab = "Expected", ylab = "Simulated")
+points(bin_sim_agg ~ bin_hat_sum, diagnostics, col = 4)
+abline(0, 1, lwd = 2, col = 2)
 legend("topleft", col = c(1, 4), pch = 21, legend = c("Simulation by record", "Aggregate simulation"), bty = "n")
         
 plot(log(pos_hat_sum) ~ log(pos_sum), diagnostics, xlab = "Observed", ylab = "Expected"); mtext("log-Normal model\n", adj = 0)
@@ -197,13 +220,14 @@ plot(log(pos_sim_sum) ~ log(pos_sum), diagnostics, xlab = "Observed", ylab = "Si
 points(log(pos_sim_agg) ~ log(pos_sum), diagnostics, col = 4)
 abline(0, 1, lwd = 2, col = 2)
 
-#plot(log(pos_sim_sum) ~ log(pos_hat_sum), diagnostics, xlab = "Expected", ylab = "Simulated")
-#points(log(pos_sim_agg) ~ log(pos_hat_sum), diagnostics, col = 4)
-#abline(0, 1, lwd = 2, col = 2)
+plot(log(pos_sim_sum) ~ log(pos_hat_sum), diagnostics, xlab = "Expected", ylab = "Simulated")
+points(log(pos_sim_agg) ~ log(pos_hat_sum), diagnostics, col = 4)
+abline(0, 1, lwd = 2, col = 2)
 legend("topleft", col = c(1, 4), pch = 21, legend = c("Simulation by record", "Aggregate simulation"), bty = "n")
 ```
 
-```{r, echo = FALSE, fig.width = 3}
+```{r, echo = FALSE}
+par(mfrow = c(1,2))
 lims <- range(discrepancy[["BN"]][,2:4])
 plot(simulated_sum ~ observed, discrepancy[["BN"]], xlim = lims, ylim = lims, xlab = "Observed vs. Expected", ylab = "Simulated vs. Expected")
 points(simulated_aggregate ~ observed, discrepancy[["BN"]], col = 4)
@@ -218,15 +242,27 @@ mtext("log-Normal model\n", adj = 0)
 
 ```
 
+# Predicted catches
+
+Catch predictions closely match the known simulated values for both the MAP and full MCMC estimation procedures.
+
 ```{r, echo = FALSE}
 dfr <- ddply(dat, .(year), summarize, catch = sum(catch))
 
-gg <- ggplot(res, aes(year, value)) + 
+dfr.map <- data.frame(year = as.numeric(as.character(X.dimnames$year)), 
+                      #value = as.numeric(res.map$estimate$predicted_catch),
+                      value = as.numeric(res.map$quantiles$predicted_catch[1,]),
+                      value_low = as.numeric(res.map$quantiles$predicted_catch[2,]),
+                      value_upp = as.numeric(res.map$quantiles$predicted_catch[3,]))
+
+gg <- ggplot(res.mcmc, aes(year, value)) + 
         stat_summary(fun.data = function(x) data.frame(ymin = quantile(x, 0.05), ymax = quantile(x, 0.95)), geom = "ribbon", alpha = 0.4) +
         stat_summary(fun.data = function(x) data.frame(y = median(x)), geom = "line", size = 2) +
-		geom_point(data = dfr, aes(as.numeric(as.character(year)), catch)) +
+		geom_point(data = dfr, aes(as.numeric(as.character(year)), catch), size = 3) +
         labs(x = "Year", y = "Incidental catch\n(thousand tonnes)") +
-        theme_bw(base_size = 20)
+        theme_bw(base_size = 12)
+gg <- gg + geom_point(data = dfr.map, aes(year, value), col = "tomato", size = 3) + geom_errorbar(data = dfr.map, aes(x = year, ymin = value_low, ymax = value_upp), col = "tomato")
+
 print(gg)
 
 ```
